--- a/forms-flow-ai/Chart.yaml
+++ b/forms-flow-ai/Chart.yaml
@@ -3,16 +3,16 @@ version: v0.0.1
 dependencies:
   - name: formio-mongodb
     version: "v0.0.1"
-    repository: "https://github.com/cberg-aot/helm-charts"
+    repository: "https://cberg-aot.github.io/helm-charts/"
   - name: forms-flow-forms
     version: "v0.0.1"
-    repository: "https://github.com/cberg-aot/helm-charts"
+    repository: "https://cberg-aot.github.io/helm-charts/"
   - name: forms-flow-analytics
     version: "v0.0.1"
-    repository: "https://github.com/cberg-aot/helm-charts"
+    repository: "https://cberg-aot.github.io/helm-charts/"
   - name: forms-flow-bpm
     version: "v0.0.1"
-    repository: "https://github.com/cberg-aot/helm-charts"
+    repository: "https://cberg-aot.github.io/helm-charts/"
   - name: camunda-postgres
     version: "v0.0.1"
-    repository: "https://github.com/cberg-aot/helm-charts"
+    repository: "https://cberg-aot.github.io/helm-charts/"
