--- a/camunda-postgres/Chart.yaml
+++ b/camunda-postgres/Chart.yaml
@@ -1,4 +1,4 @@
 description: Deployment template for a postgresql server with persistent storage.
-name: camunda-deploy
+name: camunda-postgres
 tags: camunda-postgres
 version: v0.0.1
