--- a/formio-mongodb/Chart.yaml
+++ b/formio-mongodb/Chart.yaml
@@ -1,3 +1,5 @@
+---
+apiVersion: v2
 description: MongoDB database running as replicate set
 name: formio-mongodb
 tags: nodejs,mongodb,replication,instant-app
