--- a/forms-flow-ai/Chart.yaml
+++ b/forms-flow-ai/Chart.yaml
@@ -4,6 +4,9 @@ name: forms-flow-ai
 version: v0.0.1
 icon: "https://github.com/cberg-aot/helm-charts/blob/gh-pages/icons/icon.large.png"
 dependencies:
+  - name: forms-flow-idm
+    version: "v0.0.1"
+    repository: "https://cberg-aot.github.io/helm-charts/"
   - name: formio-mongodb
     version: "v0.0.1"
     repository: "https://cberg-aot.github.io/helm-charts/"
