Updated configmap, fixed configMap not building

--- a/forms-flow-idm/templates/configmap.yaml
+++ b/forms-flow-idm/templates/configmap.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
+kind: ConfigMap
 metadata:
-    name: formsflow-ai-realm 
+    name: formsflow-ai-realm
 data:
   formsflow-ai-realm.json: |- 
     {
