--- a/forms-flow-idm/values.yaml
+++ b/forms-flow-idm/values.yaml
@@ -2,7 +2,7 @@
 keycloak:
   extraVolumes: |
     - name: forms-flow-idm 
-      configmap:
+      configMap:
         name: forms-flow-idm
 
   extraVolumeMounts: |
