Updated pod security context

--- a/forms-flow-idm/values.yaml
+++ b/forms-flow-idm/values.yaml
@@ -13,3 +13,5 @@ keycloak:
   extraEnv: |
     - name: KEYCLOAK_IMPORT
       value: /realm/realm.json
+
+  podSecurityContext: {"fsGroup":1000650000}
