--- a/formio-mongodb/values.yaml
+++ b/formio-mongodb/values.yaml
@@ -1,18 +1,18 @@
 app_group: formio-rpas
-cpu_limit: '# TODO: must define a default value for .cpu_limit'
-cpu_request: '# TODO: must define a default value for .cpu_request'
-memory_limit: '# TODO: must define a default value for .memory_limit'
-memory_request: '# TODO: must define a default value for .memory_request'
-mongodb_admin_password: '# TODO: must define a default value for .mongodb_admin_password'
+cpu_limit: 1 
+cpu_request: 500m
+memory_limit: 3Gi
+memory_request: 512Mi
+mongodb_admin_password: mongodb
 mongodb_database: formiodb
 mongodb_image: image-registry.openshift-image-registry.svc:5000/openshift/mongodb
 mongodb_image_tag: "3.6"
-mongodb_keyfile_value: '# TODO: must define a default value for .mongodb_keyfile_value'
-mongodb_password: '# TODO: must define a default value for .mongodb_password'
+mongodb_keyfile_value: mongodb
+mongodb_password: mongodb
 mongodb_replica_name: rs0
 mongodb_replicas: "2"
 mongodb_secret_name: mongodb
 mongodb_service_name: mongodb
-mongodb_user: '# TODO: must define a default value for .mongodb_user'
-sc_mongo: '# TODO: must define a default value for .sc_mongo'
-volume_capacity: '# TODO: must define a default value for .volume_capacity'
+mongodb_user: mongodb
+sc_mongo: managed-nfs-storage
+volume_capacity: 10Gi
