Removed scheme, path from probe

--- a/forms-flow-forms/values.yaml
+++ b/forms-flow-forms/values.yaml
@@ -9,7 +9,7 @@ memory_request: 100Mi
 mongodb_secret_name: formio-mongodb
 name: forms-flow-forms
 tag_name: latest
-
+mongodb_secret_name: mongodb 
 source_repository_url: https://github.com/AOT-Technologies/forms-flow-ai
 source_repository_ref: master 
 source_context_dir: /forms-flow-forms
