--- a/forms-flow-forms/values.yaml
+++ b/forms-flow-forms/values.yaml
@@ -2,7 +2,7 @@ cpu_limit: 750m
 cpu_request: 100m
 forms_url: formio.devops.aot-technologies.com
 formsflow_secret: forms-flow-ai
-image_namespace: formsflow-tools
+image_namespace: formsflow
 instance: forms-flow-forms
 memory_limit: 2Gi
 memory_request: 100Mi
