--- a/camunda-postgres/values.yaml
+++ b/camunda-postgres/values.yaml
@@ -7,7 +7,7 @@ memory_limit: 512Mi
 name: camunda-session-postgresql
 persistent_volume_class: netapp-file-standard
 persistent_volume_size: 1Gi
-postgresql_admin_password: '# TODO: must define a default value for .postgresql_admin_password'
-postgresql_password: '# TODO: must define a default value for .postgresql_password'
-postgresql_test_password: '# TODO: must define a default value for .postgresql_test_password'
-tag_name: '# TODO: must define a default value for .tag_name'
+postgresql_admin_password: admin
+postgresql_password: demo
+postgresql_test_password: demo
+tag_name: demo 
