autobuild forms-flow-ai

--- a/forms-flow-ai/values.yaml
+++ b/forms-flow-ai/values.yaml
@@ -1,8 +1,7 @@
-bpm_keycloak_clientid: '# TODO: must define a default value for .bpm_keycloak_clientid'
-bpm_keycloak_clientsecret: '# TODO: must define a default value for .bpm_keycloak_clientsecret'
-formio_admin_email: '# TODO: must define a default value for .formio_admin_email'
-formio_admin_password: '# TODO: must define a default value for .formio_admin_password'
-instance: '# TODO: must define a default value for .instance'
-keycloak_realm: '# TODO: must define a default value for .keycloak_realm'
+bpm_keycloak_clientid: keycloak
+bpm_keycloak_clientsecret: keycloak
+formio_admin_email: me@defineme.com
+formio_admin_password: admin
+keycloak_realm: forms-flow-ai
 keycloak_web_clientid: forms-flow-web
 name: forms-flow-ai
