--- a/forms-flow-forms/templates/deploymentconfig.yaml
+++ b/forms-flow-forms/templates/deploymentconfig.yaml
@@ -45,9 +45,21 @@ spec:
               name: {{ .Values.formsflow_secret }}
         image: image-registry.openshift-image-registry.svc:5000/{{ .Values.image_namespace }}/{{ .Values.name }}
         imagePullPolicy: Always
+        readinessProbe:
+          failureThreshold: 3
+          periodSeconds: 10
+          successThreshold: 1
+          tcpSocket:
+            port: 3001
+          timeoutSeconds: 1
         name: {{ .Values.name }}
         ports:
         - containerPort: 3001
+        readinessProbe:
+            failureThreshold: 3
+            periodSeconds: 10
+            successThreshold: 1
+            tcpSocket:
         resources:
           limits:
             cpu: {{ .Values.cpu_limit }}
