--- a/forms-flow-bpm/values.yaml
+++ b/forms-flow-bpm/values.yaml
@@ -26,7 +26,7 @@ name: forms-flow-bpm
 postgre_db_driver: org.postgresql.Driver
 smtp_port: 587 
 smtp_server: smtp-relay.sendinblue.com
-source_context_dir: forms-flow-bpm
+source_context_dir: /forms-flow-bpm
 source_repository_ref: master
 source_repository_url: https://github.com/AOT-Technologies/forms-flow-ai
 web_api_url: formsflow.webapi.devops.aot-technologies.com
