--- a/camunda-postgres/values.yaml
+++ b/camunda-postgres/values.yaml
@@ -3,7 +3,7 @@ database_host: forms-flow-bpm-session-db
 database_name: postgres
 database_port: "5432"
 database_user: user
-image_url: registry.redhat.io/rhscl/postgresql-94-rhel7
+image_url: registry.redhat.io/rhel8/postgresql-12
 memory_limit: 512Mi
 name: camunda-session-postgresql
 persistent_volume_class: nfs-client
