--- a/formio-mongodb/templates/statefulset.yaml
+++ b/formio-mongodb/templates/statefulset.yaml
@@ -74,7 +74,7 @@ spec:
                 - >
                   if [ ! -f /var/lib/mongodb/data/db/admin-user.lock ]; then
                     sleep 5;
-                    touch /data/db/admin-user.lock
+                    touch /var/lib/mongodb/data/db/admin-user.lock
                     if [ "$HOSTNAME" = "mongo-0" ]; then
                       mongo --eval 'db = db.getSiblingDB("admin"); db.createUser({ user: "admin", pwd: "password", roles: [{ role: "root", db: "admin" }]});';
                     fi;
