--- a/camunda-postgres/values.yaml
+++ b/camunda-postgres/values.yaml
@@ -5,7 +5,7 @@ database_port: "5432"
 database_user: user
 image_url: registry.redhat.io/rhel8/postgresql-12
 memory_limit: 512Mi
-name: camunda-session-postgresql
+name: camunda-postgresql
 persistent_volume_class: nfs-client
 persistent_volume_size: 1Gi
 postgresql_admin_password: admin
