--- a/forms-flow-ai/Chart.yaml
+++ b/forms-flow-ai/Chart.yaml
@@ -10,6 +10,9 @@ dependencies:
   - name: forms-flow-forms
     version: "v0.0.1"
     repository: "https://cberg-aot.github.io/helm-charts/"
+  - name: forms-flow-analytics
+    version: "v0.0.1"
+    repository: "https://cberg-aot.github.io/helm-charts/"
   - name: forms-flow-bpm
     version: "v0.0.1"
     repository: "https://cberg-aot.github.io/helm-charts/"
