autobuild forms-flow-analytics

--- a/forms-flow-analytics/templates/secret.yaml
+++ b/forms-flow-analytics/templates/secret.yaml
@@ -10,7 +10,7 @@ stringData:
   PYTHONUNBUFFERED: "0"
   REDASH_COOKIE_SECRET: redash-selfhosted
   REDASH_DATABASE_URL: {{ .Values.redash_database_url }}
-  REDASH_HOST: https://{{ .Values.analytics_url }}
+  REDASH_HOST: {{ .Values.redash_host }}
   REDASH_LOG_LEVEL: INFO
   REDASH_REDIS_URL: {{ .Values.redash_redis_url }}
   REDASH_SECRET_KEY: redash-selfhosted
