--- a/forms-flow-analytics/templates/secret.yaml
+++ b/forms-flow-analytics/templates/secret.yaml
@@ -9,8 +9,8 @@ stringData:
   POSTGRES_HOST_AUTH_METHOD: trust
   PYTHONUNBUFFERED: "0"
   REDASH_COOKIE_SECRET: redash-selfhosted
-  REDASH_DATABASE_URL: {{ .Values.redash_database_url }}
-  REDASH_HOST: {{ .Values.redash_host }}
+  REDASH_DATABASE_URL: "{{ .Values.redash_database_url }}"
+  REDASH_HOST: "{{ .Values.redash_host }}"
   REDASH_LOG_LEVEL: INFO
-  REDASH_REDIS_URL: {{ .Values.redash_redis_url }}
+  REDASH_REDIS_URL: "{{ .Values.redash_redis_url }}"
   REDASH_SECRET_KEY: redash-selfhosted
