--- a/forms-flow-analytics/values.yaml
+++ b/forms-flow-analytics/values.yaml
@@ -1,5 +1,7 @@
 cpu_limit: 750m
 cpu_request: 100m
+memory_limit: 2Gi
+memory_request: 100Mi
 name: forms-flow-analytics
 redash_database_url: postgresql://postgres@postgres/postgres
 redash_host: formsflow.analytics.apps.devops.aot-technologies.com
