--- a/forms-flow-analytics/templates/deploymentconfig.yaml
+++ b/forms-flow-analytics/templates/deploymentconfig.yaml
@@ -143,7 +143,7 @@ spec:
               key: PYTHONUNBUFFERED
               name: {{ .Values.name }}
         - name: QUEUES
-          value: queries
+          value: "queries"
         - name: REDASH_COOKIE_SECRET
           valueFrom:
             secretKeyRef:
@@ -230,7 +230,7 @@ spec:
               key: PYTHONUNBUFFERED
               name: {{ .Values.name }}
         - name: QUEUES
-          value: scheduled_queries,schemas
+          value: "scheduled_queries,schemas"
         - name: REDASH_COOKIE_SECRET
           valueFrom:
             secretKeyRef:
@@ -400,7 +400,7 @@ spec:
               key: PYTHONUNBUFFERED
               name: {{ .Values.name }}
         - name: QUEUES
-          value: periodic emails default
+          value: "periodic emails default"
         - name: REDASH_COOKIE_SECRET
           valueFrom:
             secretKeyRef:
